--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,7 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
     <h5 class="my-0 mr-md-auto font-weight-bold" ><a [routerLink]="['/']" routerLinkActive="router-link-active" >AOT Coding test</a></h5>
     <nav class="my-2 my-md-0 mr-md-3">
-      <a class="p-2 text-dark" href="#">What you need? </a>
-      <a class="p-2 text-dark" href="#">Needs</a>
-      <a class="p-2 text-dark" href="#">Activities</a>
-      <a class="p-2 text-dark" href="#">Contact Us</a>
+      <!-- <a class="p-2 text-dark" href="#">Contact Us</a> -->
     </nav>
     <a class="btn btn-outline-info" [routerLink]="['/sign-in']" *ngIf="router.url !=='/sign-in'">Sign In</a>
 
