--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar> 
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<main class="container" style="padding: 2em;">
+	<router-outlet></router-outlet>
+</main>
