--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,1 +1,1 @@
-<p>index works!</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium voluptatum debitis consequatur delectus temporibus, fuga distinctio enim, eaque ratione accusamus, ipsum aut ullam eos repellat quisquam excepturi voluptatem sunt mollitia!</p>
