--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -11,7 +11,7 @@
   </div>
   <hr>
   <div class="row" *ngIf="!switchForm">
-    <div class="col-md--12 col-md-12">
+    <div class="col-md-12 col-md-12">
       <table class="table">
         <thead class="thead-dark">
           <tr>
@@ -26,7 +26,7 @@
             <th scope="row"> {{group.id}} </th>
             <td>{{ group.name | titlecase }}</td>
             <td> {{ group.memberCount }} </td>
-            <td>
+            <td style="display: inline-flex !important;">
               <button class="btn btn-sm btn-outline-info">Join</button>
               &nbsp;
               <button class="btn btn-sm btn-outline-danger">Delete</button>
