--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar> 
-<main class="container" style="padding: 2em;">
+<main class="container" style="padding-top: 2em;">
 	<router-outlet></router-outlet>
 </main>
