--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -48,7 +48,7 @@
         </div>
         <button type="submit" class="btn btn-outline-primary">Submit</button>
       </form>
-      <small class="red">{{errorMessage}}</small>
+      <small class="">{{errorMessage}}</small>
     </div>
   </div>
 
