--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -4,7 +4,7 @@
       <h1>{{pageTitle}}</h1>
     </div>
     <div class="col-md-6 col-sm-12 text-right">
-      <button class="btn btn-info" type="button" (click)="switchForm=!switchForm">
+      <button class="btn btn-info" type="button" (click)="switchData()">
         {{ switchForm ? "Groups" : "New group" }}
       </button>
     </div>
@@ -29,8 +29,13 @@
             <td style="display: inline-flex !important;">
               <button class="btn btn-sm btn-outline-info">Join</button>
               &nbsp;
-              <button class="btn btn-sm btn-outline-danger">Delete</button>
+              <button class="btn btn-sm btn-outline-danger" type="button" (click)="removeGroup(group.id)">Delete</button>
             </td>
+          </tr>
+          <tr *ngIf="groups.length == 0">
+              <td colspan="4" class="text-center">
+                  No records found.
+              </td>
           </tr>
         </tbody>
       </table>
@@ -39,7 +44,7 @@
 
   <div class="row" *ngIf="switchForm">
     <div class="col-md-12 col-sm-12">
-      <form class="form-inline" method="post" action="#" (submit)="newGroup()">
+      <form class="form-inline" method="post" action="#" (submit)="addNew()">
         <div class="form-group col-sm-12 col-md-6">
           <label for="name" class="sr-only">Name</label>
           <input type="text" class="form-control" style="width: 100%;" name="name" [(ngModel)]="name"
