--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -25,8 +25,8 @@
 
     <div class="col-md-12">
         <hr>
-        <button class="btn btn-outline-primary" [routerLink]="['/']" type="button"> <i class="fa fa-arrow-left"></i> Go
-            back </button>
+        <button class="btn btn-outline-primary" [routerLink]="['/']" type="button"> <i class="fa fa-arrow-left"></i>
+            Home </button>
 
         &nbsp;
         <a class="btn btn-outline-success" [routerLink]="['/sign-up']" *ngIf="router.url !=='/sign-up'">Sign up</a>
