--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,6 +14,9 @@
         <a class="nav-link" [routerLink]="['/group']">Groups</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#">Users</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#">Members</a>
       </li>
 
