--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,19 @@
 
 body{
     font-family: 'Comic Neue', cursive;
-}
+    /*background-color: blue;*/
 
+    /*background: url("https://cdn.dribbble.com/users/2566143/screenshots/5895981/splatterbackground.png");*/
+    background-image: url("assets/images/background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+main.container{
+	margin-top: 2em;
+	padding-top: 1em;
+	padding-bottom: 2em;
+	background-color: #dee3ddf0;
+}
 .red{
     color: red;
 }
