user component and service created

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,13 +11,10 @@
         <a class="nav-link" [routerLink]="['/']" routerLinkActive="router-link-active" >Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/group']">Groups</a>
+        <a class="nav-link" [routerLink]="['/groups']">Groups</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Users</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Members</a>
+        <a class="nav-link" [routerLink]="['/users']">Users</a>
       </li>
 
     </ul>
