--- a/src/styles.css
+++ b/src/styles.css
@@ -4,9 +4,7 @@
 
 body{
     font-family: 'Comic Neue', cursive;
-    /*background-color: blue;*/
-
-    /*background: url("https://cdn.dribbble.com/users/2566143/screenshots/5895981/splatterbackground.png");*/
+    /*sokeno$123*/
     background-image: url("assets/images/background.png");
     background-repeat: no-repeat;
     background-size: cover;
