--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -27,6 +27,8 @@
             <td>{{ group.name | titlecase }}</td>
             <td> {{ group.memberCount }} </td>
             <td style="display: inline-flex !important;">
+              <button class="btn btn-sm btn-outline-success" (click)="editGroup(group.id)">Edit</button>
+              &nbsp;
               <button class="btn btn-sm btn-outline-info">Join</button>
               &nbsp;
               <button class="btn btn-sm btn-outline-danger" type="button" (click)="removeGroup(group.id)">Delete</button>
@@ -44,6 +46,7 @@
 
   <div class="row" *ngIf="switchForm">
     <div class="col-md-12 col-sm-12">
+      <!-- <p>Edit</p> -->
       <form class="form-inline" method="post" action="#" (submit)="addNew()">
         <div class="form-group col-sm-12 col-md-6">
           <label for="name" class="sr-only">Name</label>
@@ -51,7 +54,7 @@
             placeholder="Group name"><br>
 
         </div>
-        <button type="submit" class="btn btn-outline-primary">Submit</button>
+        <button type="submit" class="btn btn-outline-primary">{{ edit ? "Update" : "Submit"}}</button>
       </form>
       <small class="">{{errorMessage}}</small>
     </div>
