--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,37 @@
-<p>user works!</p>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12 col-sm-12">
+			<h1>
+				{{pageTitle}}
+			</h1>
+		</div>
+		<div class="col-md-12 col-sm-12">
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-12 col-md-12">
+			<table class="table">
+			  <thead class="thead-dark">
+			    <tr>
+			      <th scope="col">#</th>
+			      <th scope="col">Username</th>
+			      <th scope="col">Email</th>
+			      <th scope="col">Action</th>
+			    </tr>
+			  </thead>
+			  <tbody>
+			    <tr *ngFor="let user of users">
+			      <th scope="row">{{user.id}}</th>
+			      <td>{{ user.username}}</td>
+			      <td>{{user.email}}</td>
+			      <td>
+			      	<button class="btn btn-outline-primary" type="button">
+			      		Edit
+			      	</button>
+			      </td>
+			    </tr>
+			  </tbody>
+			</table>
+		</div>
+	</div>
+</div>
