--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,6 +16,9 @@
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/users']">Users</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/users']">My groups</a>
+      </li>
 
     </ul>
     <ul class="navbar-nav navbar-right">
