--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -22,7 +22,7 @@
 			  <tbody>
 			    <tr *ngFor="let user of users">
 			      <th scope="row">{{user.id}}</th>
-			      <td>{{ user.username}}</td>
+			      <td>{{ user.name}}</td>
 			      <td>{{user.email}}</td>
 			      <td>
 			      	<button class="btn btn-outline-primary" type="button">
