--- a/src/styles.css
+++ b/src/styles.css
@@ -6,9 +6,10 @@ body{
     /*font-family: 'Comic Neue', cursive;*/
     font-family: 'Montserrat', sans-serif;
     /*sokeno$123*/
-    /* background-image: url("assets/images/background.png");
+
+    background-image: url("assets/images/background.png");
     background-repeat: no-repeat;
-    background-size: cover; */
+    background-size: cover;
 }
 main.container{
 	margin-top: 2em;
