--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,7 +26,7 @@
         <a class="nav-link" [routerLink]="['/sign-in']" *ngIf="router.url !=='/sign-in'">Sign In </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/sign-up']" *ngIf="router.url !=='/sign-up'">Sign Up</a>
+        <a class="nav-link" [routerLink]="['/sign-up']" *ngIf="(router.url !=='/sign-up' && router.url !=='/' )">Sign Up</a>
       </li>
     </ul>
   </div>
