user can register and login

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -3,24 +3,52 @@
 
 <div class="container">
     <div class="col-md-12 p-1">
-        <div class="form-group col-md-6 col-sm-12">
-            <label for="email or phonenumber">Email or phone number</label>
-            <input type="text" name="email" class="form-control" [(ngModel)]="key">
-            <small class="red">{{keyMessage}}</small>
-        </div>
+        <form method="post" novalidate action="" (ngSubmit)="login()" [formGroup]="loginForm">
+            <div class="form-group col-md-6 col-sm-12">
+                <label for="email or phonenumber">Email</label>
+                <input type="email" 
+                       class="form-control" 
+                       placeholder="Email (required)" 
+                       formControlName="email" 
+                       required 
+                       email
+                       [ngClass]="{'is-invalid': (loginForm.get('email').touched || loginForm.get('email').dirty) && !loginForm.get('email').valid }">
+                  <span class="invalid-feedback">
+                    <span *ngIf="loginForm.get('email').errors?.required">
+                      Please enter your email address.
+                    </span>
+                    <span *ngIf="loginForm.get('email').errors?.email">
+                      Please enter a valid email address.
+                    </span>
+                  </span>
+            </div>
 
 
-        <div class="form-group col-md-6 col-sm-12">
-            <label for="email or phonenumber">Password</label>
-            <input type="password" name="password" class="form-control" [(ngModel)]="password">
-            <small class="red"> {{passwordMessage}} </small>
-        </div>
+            <div class="form-group col-md-6 col-sm-12">
+                <label for="email or phonenumber">Password</label>
+                <input type="password"  
+                       class="form-control" 
+                       formControlName="password" 
+                       placeholder="Password (required)" 
+                       required 
+                       minlength="6" 
+                       [ngClass]="{'is-invalid':(loginForm.get('password').touched || loginForm.get('password').dirty) && !loginForm.get('password').valid}">
+                <span class="invalid-feedback">
+                    <span *ngIf="loginForm.get('password').errors?.required">
+                        Please enter a password.
+                    </span>
+                    <span *ngIf="loginForm.get('password').errors?.minlength">
+                        Your password must be greater than 6 characters.
+                    </span>
+                </span>
+            </div>
 
 
 
-        <div class="form-group col-md-6 col-sm-12">
-            <button class="btn btn-info" type="button" (click)="loginHuman()">Submit</button>
-        </div>
+            <div class="form-group col-md-6 col-sm-12">
+                <button class="btn btn-info" [disabled]="!loginForm.valid" type="submit">Submit</button>
+            </div>
+        </form>
     </div>
 
     <div class="col-md-12">
