--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -53,22 +53,37 @@
   <div class="row" *ngIf="switchForm">
     <div class="col-md-12 col-sm-12">
       <!-- <p>Edit</p> -->
-      <form class="form-inline" method="post" action="#" (submit)="addNew()">
-        <div class="form-group col-sm-12 col-md-4">
-          <label for="name" class="sr-only">Name</label>
-          <input type="text" class="form-control" style="width: 100%;" name="name" [(ngModel)]="name"
-            placeholder="Group name"><br>
-
+      <form novalidate action="" (ngSubmit)="addGroup()" [formGroup]="groupForm">
+        <div class="form-group col-md-6 col-sm-12">
+            <label for="name">Name</label>
+            <input type="text" 
+                   class="form-control" 
+                   formControlName="name" 
+                   required 
+                   minlength="1"
+                   placeholder="Name (required)" 
+                   [ngClass]="{'is-invalid':(groupForm.get('name').touched || groupForm.get('name').dirty) && !groupForm.get('name').valid}">
+            <span class="invalid-feedback">
+                <span *ngIf="groupForm.get('name').errors?.required">
+                    Please enter a group name.
+                </span>
+                <span *ngIf="groupForm.get('name').errors?.minlength">
+                    Name must be greater than 1 characters.
+                </span>
+            </span>
         </div>
-        <div class="form-group col-sm-12 col-md-6">
-          <label for="description" class="sr-only">Description</label>
-          <input type="text" class="form-control" style="width: 100%;" name="description" [(ngModel)]="description"
-            placeholder="Description"><br>
-
+        <div class="form-group col-md-6 col-sm-12">
+            <label for="name">Name</label>
+            <input type="text" 
+                   class="form-control" 
+                   formControlName="description" 
+                   placeholder="Description">
         </div>
-        <button type="submit" class="btn btn-outline-primary">{{ edit ? "Update" : "Submit"}}</button>
+        <div class="form-group col-md-6 col-sm-12">
+            <button class="btn btn-info" [disabled]="!groupForm.valid" type="submit">{{ edit ? "Update" : "Submit"}}</button>
+        </div>
       </form>
-      <small class="">{{errorMessage}}</small>
+      <small class="">{{infoMessage}}</small>
     </div>
   </div>
 
