--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -66,6 +66,9 @@
             <div class="form-group col-md-6 col-sm-12">
                 <button class="btn btn-info" [disabled]="!userForm.valid" type="submit">Submit</button>
             </div>
+            <div class="form-group col-md-6 col-sm-12">
+              <small>{{infoMessage}}</small>
+            </div>
         </form>
     </div>
 
