--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -48,6 +48,9 @@
             <div class="form-group col-md-6 col-sm-12">
                 <button class="btn btn-info" [disabled]="!loginForm.valid" type="submit">Submit</button>
             </div>
+            <div class="form-group col-md-6 col-sm-12">
+              <small>{{infoMessage}}</small>
+            </div>
         </form>
     </div>
 
