--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -22,7 +22,6 @@
             <th scope="col">#</th>
             <th scope="col">Name</th>
             <th scope="col">Description</th>
-            <th scope="col">Members count</th>
             <th scope="col">Action</th>
           </tr>
         </thead>
@@ -31,7 +30,6 @@
             <th scope="row"> {{group.id}} </th>
             <td>{{ group.name | titlecase }}</td>
             <td>{{ group.description | titlecase }}</td>
-            <td> {{ group.memberCount }}  <a href="#" title="View members" id="view-members"><i class="fa fa-eye"></i></a> </td>
             <td id="action">
               <button *ngIf="group.user_id !== loggedInUserID" class="btn btn-sm btn-outline-info" (click)="joinGroup(group.id)">Join</button>
               &nbsp;
@@ -73,7 +71,7 @@
             </span>
         </div>
         <div class="form-group col-md-6 col-sm-12">
-            <label for="name">Name</label>
+            <label for="description">Desscription</label>
             <input type="text" 
                    class="form-control" 
                    formControlName="description" 
