--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -64,21 +64,12 @@
 
 
             <div class="form-group col-md-6 col-sm-12">
-                <button class="btn btn-info" [disabled]="!userForm.valid" type="submit">Submit</button>
+                <button class="btn btn-info" [disabled]="!userForm.valid" type="submit">Submit</button>&nbsp;&nbsp;
+                <a class="pull-right" [routerLink]="['/sign-in']" *ngIf="router.url !=='/sign-in'">or Sign In</a>
             </div>
             <div class="form-group col-md-6 col-sm-12">
               <small>{{infoMessage}}</small>
             </div>
         </form>
-    </div>
-
-    <div class="col-md-12">
-        <hr>
-        <button class="btn btn-outline-primary" [routerLink]="['/']" type="button"> <i class="fa fa-arrow-left"></i>
-            Home </button>
-        &nbsp;
-        <a class="btn btn-outline-info" [routerLink]="['/sign-in']" *ngIf="router.url !=='/sign-in'">Sign In</a>
-
-
     </div>
 </div>
