--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -31,11 +31,14 @@
             <td>{{ group.name | titlecase }}</td>
             <td>{{ group.description | titlecase }}</td>
             <td id="action">
-              <button *ngIf="group.createdBy !== user.id" class="btn btn-sm btn-outline-info" (click)="joinGroup(group.id)">Join</button>
+              <button class="btn btn-sm btn-outline-info" (click)="joinGroup(group.id)">Join</button>
+              <!-- <button *ngIf="group.createdBy !== user.id" class="btn btn-sm btn-outline-info" (click)="joinGroup(group.id)">Join</button> -->
               &nbsp;
-              <button *ngIf="group.createdBy == user.id" class="btn btn-sm btn-outline-success" (click)="getGroup(group.id)">Edit</button>
+              <button class="btn btn-sm btn-outline-success" (click)="getGroup(group.id)">Edit</button>
+              <!-- <button *ngIf="group.createdBy == user.id" class="btn btn-sm btn-outline-success" (click)="getGroup(group.id)">Edit</button> -->
               &nbsp;
-              <button *ngIf="group.createdBy == user.id" class="btn btn-sm btn-outline-danger" type="button" (click)="deleteGroup(group.id)">Delete</button>
+              <button class="btn btn-sm btn-outline-danger" type="button" (click)="deleteGroup(group.id)">Delete</button>
+              <!-- <button *ngIf="group.createdBy == user.id" class="btn btn-sm btn-outline-danger" type="button" (click)="deleteGroup(group.id)">Delete</button> -->
             </td>
           </tr>
           <tr *ngIf="groups.length == 0">
