--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,9 +13,9 @@
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/groups']">Groups</a>
       </li>
-      <li class="nav-item">
+<!--       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/users']">Users</a>
-      </li>
+      </li> -->
 <!--       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/users']">My groups</a>
       </li> -->
