--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -37,14 +37,14 @@
             <td>{{ group.description | titlecase }}</td>
             <td id="action">
               <!-- <button class="btn btn-sm btn-outline-info" (click)="joinGroup(group.id)">Join</button> -->
-              <button *ngIf="group.createdBy !== user.id" class="btn btn-sm btn-outline-info" (click)="joinGroup(group.id)">Join</button>
+              <button *ngIf="user && group.createdBy !== user.id" class="btn btn-sm btn-outline-info" (click)="joinGroup(group.id)">Join</button>
               &nbsp;
               <!-- <button class="btn btn-sm btn-outline-success" (click)="getGroup(group.id)">Edit</button> -->
-              <button *ngIf="group.createdBy == user.id" class="btn btn-sm btn-outline-success" (click)="getGroup(group.id)">Edit</button>
+              <button *ngIf="user && group.createdBy == user.id" class="btn btn-sm btn-outline-success" (click)="getGroup(group.id)">Edit</button>
               &nbsp;
               <!-- <button class="btn btn-sm btn-outline-danger" type="button" (click)="deleteGroup(group.id)">Delete</button> -->
-              <button *ngIf="group.createdBy == user.id" class="btn btn-sm btn-outline-primary" type="button" [routerLink]="['/group', group.id, 'members']">Members</button>&nbsp;
-              <button *ngIf="group.createdBy == user.id" class="btn btn-sm btn-outline-danger" type="button" (click)="deleteGroup(group.id)">Delete</button>
+              <button *ngIf="user && group.createdBy == user.id" class="btn btn-sm btn-outline-primary" type="button" [routerLink]="['/group', group.id, 'members']">Members</button>&nbsp;
+              <button *ngIf="user && group.createdBy == user.id" class="btn btn-sm btn-outline-danger" type="button" (click)="deleteGroup(group.id)">Delete</button>
             </td>
           </tr>
           <tr *ngIf="groups.length == 0">
