--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,24 +11,18 @@
         <a class="nav-link" [routerLink]="['/']" routerLinkActive="router-link-active" >Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/groups']">Groups</a>
+        <a class="nav-link" *ngIf="loggedIn" [routerLink]="['/groups']">Groups</a>
       </li>
-<!--       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/users']">Users</a>
-      </li> -->
-<!--       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/users']">My groups</a>
-      </li> -->
 
     </ul>
     <ul class="navbar-nav navbar-right">
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/sign-in']" *ngIf="router.url !=='/sign-in'">Sign In </a>
+        <a class="nav-link" *ngIf="!loggedIn && (router.url !=='/sign-in')" [routerLink]="['/sign-in']">Sign In </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/sign-up']" *ngIf="(router.url !=='/sign-up' && router.url !=='/' )">Sign Up</a>
+        <a class="nav-link" *ngIf="!loggedIn && (router.url !=='/sign-up' && router.url !=='/' )" [routerLink]="['/sign-up']" >Sign Up</a>
       <li class="nav-item">
-        <a class="nav-link" (click)="logOut()">Log Out</a>
+        <a class="nav-link" *ngIf="loggedIn" (click)="logOut()">Log Out</a>
       </li>
     </ul>
   </div>
