--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -50,7 +50,7 @@
                 <a class="pull-right" [routerLink]="['/sign-up']" *ngIf="router.url !=='/sign-up'">or Sign up</a>
             </div>
             <div class="form-group col-md-6 col-sm-12">
-              <small>{{infoMessage}}</small>
+              <small [class]="color" >{{infoMessage}}</small>
             </div>
         </form>
     </div>
