New Interface changes

--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -19,7 +19,7 @@
       <table class="table mt-2">
         <thead class="thead-dark">
           <tr>
-            <th scope="col">#</th>
+            <!-- <th scope="col">#</th> -->
             <th scope="col">Name</th>
             <th scope="col">Description</th>
             <th scope="col">Action</th>
@@ -32,7 +32,7 @@
             </td>
           </tr>
           <tr *ngFor="let group of groups">
-            <th scope="row"> {{group.id}} </th>
+            <!-- <th scope="row"> {{group.id}} </th> -->
             <td>{{ group.name | titlecase }}</td>
             <td>{{ group.description | titlecase }}</td>
             <td id="action">
