--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar> 
-<main class="container">
-	<router-outlet></router-outlet>
-</main>
+<router-outlet></router-outlet>
+<!-- <main class="container">
+</main> -->
