--- a/src/app/group/group.component.css
+++ b/src/app/group/group.component.css
@@ -7,3 +7,11 @@ td#action{
 	display: inline-flex !important;
 	text-align: center;
 }
+
+.container {
+    margin-top: 2em;
+    padding-top: 1em;
+    padding-bottom: 2em;
+    background-color: #dee3dd;
+    /* max-width: 580px; */
+}
